--- a/card/card.html
+++ b/card/card.html
@@ -14,7 +14,7 @@
     <div class="card">
         <h2>CHINA</h2>
         <div class="img">
-            <div class="d-flex justify-content-end price">
+            <div class="d-flex justify-content-center price">
                 <div class="priceColour">$1000</div>
             </div>
 
