dynamic page added featuring places

--- a/carousel/carousel.html
+++ b/carousel/carousel.html
@@ -34,7 +34,7 @@
                         <h3 class="h3-responsive fadeInRight animated slow brand">Welcome to</h3>
                         <h3 class="h3-responsive fadeInLeft animated slow brand">Azwego</h3>
                     </div>
-                    <a href="" class="btn btn-outline-primary btn-lg animated zoomIn">Know More</a>
+                    <a href="visit.html" class="btn btn-outline-primary btn-lg animated zoomIn">Know More</a>
 
                 </div>
             </div>
